correction de bug pour les pc de la fac